@@ -1,5 +1,5 @@
 /**********************************************************************
- * $Id: mitab_mapheaderblock.cpp,v 1.26 2004-06-30 20:29:04 dmorissette Exp $
+ * $Id: mitab_mapheaderblock.cpp,v 1.27 2004-12-08 23:27:35 dmorissette Exp $
  *
  * Name:     mitab_mapheaderblock.cpp
  * Project:  MapInfo TAB Read/Write library
@@ -31,7 +31,10 @@
  **********************************************************************
  *
  * $Log: mitab_mapheaderblock.cpp,v $
- * Revision 1.26  2004-06-30 20:29:04  dmorissette
+ * Revision 1.27  2004-12-08 23:27:35  dmorissette
+ * Fixed coordinates rounding error in Coordsys2Int() (bug 894)
+ *
+ * Revision 1.26  2004/06/30 20:29:04  dmorissette
  * Fixed refs to old address danmo@videotron.ca
  *
  * Revision 1.25  2003/08/12 23:17:21  dmorissette
@@ -434,21 +437,19 @@ int TABMAPHeaderBlock::Coordsys2Int(double dX, double dY,
      * NOTE: double value must be use here, the limit of integer value 
      * have been reach some times due to the very big number used here.
      *----------------------------------------------------------------*/
-    double dTempX, dTempY;
+    GInt32 nTempX, nTempY;
 
     if (m_nCoordOriginQuadrant==2 || m_nCoordOriginQuadrant==3 ||
         m_nCoordOriginQuadrant==0 )
-        dTempX = (double)((-1.0*dX*m_XScale - m_XDispl)+0.5);
+        nTempX = ROUND_INT(-1.0*dX*m_XScale - m_XDispl);
     else
-        dTempX = (double)((dX*m_XScale + m_XDispl)+0.5);
+        nTempX = ROUND_INT(dX*m_XScale + m_XDispl);
 
     if (m_nCoordOriginQuadrant==3 || m_nCoordOriginQuadrant==4 ||
         m_nCoordOriginQuadrant==0 )
-        dTempY = (double)((-1.0*dY*m_YScale - m_YDispl)+0.5);
+        nTempY = ROUND_INT(-1.0*dY*m_YScale - m_YDispl);
     else
-        dTempY = (double)((dY*m_YScale + m_YDispl)+0.5);
-
-//printf("Coordsys2Int: (%10g, %10g) -> (%d, %d)\n", dX, dY, nX, nY);
+        nTempY = ROUND_INT(dY*m_YScale + m_YDispl);
 
     /*-----------------------------------------------------------------
      * Make sure we'll never output coordinates outside of the valid
@@ -456,29 +457,29 @@ int TABMAPHeaderBlock::Coordsys2Int(double dX, double dY,
      * Integer coordinates outside of that range will confuse MapInfo.
      *----------------------------------------------------------------*/
     GBool bIntBoundsOverflow = FALSE;
-    if (dTempX < -1000000000)
+    if (nTempX < -1000000000)
     {
-        dTempX = -1000000000;
+        nTempX = -1000000000;
         bIntBoundsOverflow = TRUE;
     }
-    if (dTempX > 1000000000)
+    if (nTempX > 1000000000)
     {
-        dTempX = 1000000000;
+        nTempX = 1000000000;
         bIntBoundsOverflow = TRUE;
     }
-    if (dTempY < -1000000000)
+    if (nTempY < -1000000000)
     {
-        dTempY = -1000000000;
+        nTempY = -1000000000;
         bIntBoundsOverflow = TRUE;
     }
-    if (dTempY > 1000000000)
+    if (nTempY > 1000000000)
     {
-        dTempY = 1000000000;
+        nTempY = 1000000000;
         bIntBoundsOverflow = TRUE;
     }
 
-    nX = (GInt32) dTempX;
-    nY = (GInt32) dTempY;
+    nX = nTempX;
+    nY = nTempY;
 
     if (bIntBoundsOverflow && !bIgnoreOverflow)
     {
